@@ -354,7 +354,7 @@ namespace BOB
 						propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_finalTree = (TreeInfo)target;
 					}
 					propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_angle = propReference.angle;
-					propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_position = propReference.postion;
+					propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_position = propReference.position;
 					propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_probability = propReference.probability;
 
 					// Add network to dirty list.
@@ -396,7 +396,7 @@ namespace BOB
 							propReference.network.m_lanes[propReference.laneIndex].m_laneProps.m_props[propReference.propIndex].m_finalTree = (TreeInfo)target;
 						}
 						netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_angle = propReference.angle;
-						netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position = propReference.postion;
+						netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position = propReference.position;
 						netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_probability = propReference.probability;
 
 						// Remove this reference and return.
@@ -514,7 +514,7 @@ namespace BOB
 								laneIndex = laneIndex,
 								propIndex = propIndex,
 								angle = network.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_angle,
-								postion = network.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position,
+								position = network.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position,
 								probability = network.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_probability
 							});
 						}
@@ -610,7 +610,7 @@ namespace BOB
 					laneIndex = laneIndex,
 					propIndex = propIndex,
 					angle = netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_angle,
-					postion = netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position
+					position = netPrefab.m_lanes[laneIndex].m_laneProps.m_props[propIndex].m_position
 				};
 
 				replacements[target].references.Add(newReference);
